Atualizões do diretório-novas atividades

--- a/pagina-vanildo-HTML.html
+++ b/pagina-vanildo-HTML.html
@@ -14,7 +14,8 @@
         <main>
             <section>
                 <h2>Sobre mim:</h2>
-                <img src="https://media.licdn.com/dms/image/v2/D4D03AQFmx2foHmOtdg/profile-displayphoto-crop_800_800/B4DZh2Ve3WH4AI-/0/1754332001767?e=1757548800&v=beta&t=-wZqsxSgxoLol8zWz6hQ3mym6i5u5rDJeLgbR-VevAI" alt="Foto de Vanildo Junior" width="200" height="200">
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQFmx2foHmOtdg/profile-displayphoto-scale_200_200/B4DZh2Ve3WH4AY-/0/1754332001883?e=1757548800&v=beta&t=ehFWOcnFBuTc0gswOFkVIdlq970P6mkFUBt_xzQhV7Y" 
+                alt="Foto de Vanildo Junior" width="200" height="200">
                 <p>Me chamo Vanildo Junior. Sou bolsista do programa Futuro Digital, com foco em Desenvolvimento Web. Pretendo aprender novas tecnologias e aplicá-las à área de Educação.</p>
             </section>
 
